samples/_failures_safe/1761601523_060001_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ee931710.c: In function ‘main’:
./samples/SAFE/__tmp_ee931710.c:198:5: error: expected expression at end of input
  198 |     if (len ==
      |     ^~
./samples/SAFE/__tmp_ee931710.c:198:5: error: expected declaration or statement at end of input
